# VoxelEngine

./: .clang-format  .editorconfig  .env.cmake  .gitignore  .zed  CMakeLists.txt  README.md  VoxelEngine.sln  imgui.ini  unixBuild.sh
README/: Drawing.md  GraphicsPipeline.md  Windowing.md
VoxelEngine/: Makefile  VoxelEngine.vcxproj  VoxelOutput  compile.sh  compile_commands.json  imgui.ini  imgui_settings.ini
VoxelEngine/README/: Drawing.md  GraphicsPipeline.md  Windowing.md
VoxelEngine/shaders/: fragment_shader.frag  galaxy_compute.comp  galaxy_compute.comp.spv  galaxy_fragment.frag  galaxy_fragment.frag.spv  galaxy_vertex copy.vert  galaxy_vertex.vert  galaxy_vertex.vert.spv  point_light_fragment.frag  point_light_vertex.vert  vertex_shader.vert  vertex_shader.vert.spv
VoxelEngine/shaders/Galaxy/: galaxy_compute.comp  galaxy_compute.comp.spv
VoxelEngine/shaders/PointLight/: point_light_fragment.frag
VoxelEngine/src/: FrameInfo.h  VulkanApplication.cpp  VulkanApplication.h  Window.cpp  Window.h  main.cpp  window.cpp  window.h
VoxelEngine/src/Buffer/: Buffer.cpp  Buffer.h
VoxelEngine/src/Camera/: Camera.cpp  Camera.h
VoxelEngine/src/Descriptor/: Descriptors.cpp
VoxelEngine/src/Device/: Device.cpp  Device.h
VoxelEngine/src/Game/: GameObject.cpp  GameObject.h
VoxelEngine/src/Graphics/: Pipeline.cpp  Pipeline.h
VoxelEngine/src/ImGui/: ImGuiManager.cpp  ImGuiManager.h
VoxelEngine/src/Input/: Input.cpp  Input.h
VoxelEngine/src/Models/: Model.cpp  Model.h
VoxelEngine/src/Presentation/: SwapChain.cpp  SwapChain.h
VoxelEngine/src/Rendering/: RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h
VoxelEngine/src/Scenes/: GalaxyScene.cpp  GalaxyScene.h  LightScene.cpp  LightScene.h  Scene.h
VoxelEngine/src/Scenes/Galaxy/: GalaxyScene.cpp
VoxelEngine/src/Scenes/Light/: LightScene.h
VoxelEngine/src/Utils/: ellipse.h  hashFunction.h  specrend.h
VoxelEngine/src/systems/: GalaxySystem copy.cpp  GalaxySystem copy.h  GalaxySystem.cpp  GalaxySystem.h  PointLight.cpp  PointLight.h  PointLightSystem.cpp  PointLightSystem.h
VoxelEngine/src/systems/Galaxy/: GalaxySystem.cpp
VoxelEngine/src/systems/PointLight/: PointLightSystem.h
models/: test2.mtl
shaders/: vertex_shader.vert  vertex_shader.vert.spv
shaders/Galaxy/: galaxy_fragment.frag.spv  galaxy_vertex.vert.spv
src/: FrameInfo.h  VulkanApplication.cpp  VulkanApplication.h  Window.cpp  Window.h  main.cpp
src/Buffer/: Buffer.cpp  Buffer.h
src/Camera/: Camera.cpp  Camera.h
src/Descriptor/: Descriptors.cpp  Descriptors.h
src/Device/: Device.cpp  Device.h
src/Game/: GameObject.cpp  GameObject.h
src/Graphics/: Pipeline.cpp  Pipeline.h
src/ImGui/: ImGuiManager.cpp  ImGuiManager.h
src/Input/: Input.cpp  Input.h
src/Models/: Model.cpp  Model.h
src/Presentation/: SwapChain.cpp  SwapChain.h
src/Rendering/: Renderer.cpp  Renderer.h
src/Scenes/: Scene.h
src/Scenes/Galaxy/: GalaxyScene.cpp  GalaxyScene.h
src/Scenes/Light/: LightScene.cpp
src/Utils/: ellipse.h  hashFunction.h  utils.h
src/systems/: RenderSystem.cpp  RenderSystem.h
src/systems/Galaxy/: GalaxySystem.h
src/systems/PointLight/: PointLightSystem.cpp  PointLightSystem.h
